Fix usages of a deprecated method from AssertJ